{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 442,
  "lineage": "44c15fce-d2bb-a961-89e5-6b7adf4929fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab2bb353ada3c9a6",
            "association_id": "eipassoc-096f46237c605cad3",
            "domain": "vpc",
            "id": "eipalloc-0ab2bb353ada3c9a6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f20437664134ab4a",
            "private_dns": "ip-10-20-1-198.ec2.internal",
            "private_ip": "10.20.1.198",
            "public_dns": "ec2-44-223-136-88.compute-1.amazonaws.com",
            "public_ip": "44.223.136.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "privateserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:767397713354:instance/i-094357c8cd7f475ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "priya-role",
            "id": "i-094357c8cd7f475ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06efa066b8dfdca3f",
            "private_dns": "ip-10-20-4-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.4.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f96dcba13176211e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0641880feec4a92",
            "tags": {
              "Name": "devops-privateserver"
            },
            "tags_all": {
              "Name": "devops-privateserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c33785b17b78698f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:internet-gateway/igw-0a3f5a9e67fa945a0",
            "id": "igw-0a3f5a9e67fa945a0",
            "owner_id": "767397713354",
            "tags": {
              "Name": "devops-igw"
            },
            "tags_all": {
              "Name": "devops-igw"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:loadbalancer/net/priyanlb/eda46a3f5a2c856e",
            "arn_suffix": "net/priyanlb/eda46a3f5a2c856e",
            "dns_name": "priyanlb-eda46a3f5a2c856e.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397713354:loadbalancer/net/priyanlb/eda46a3f5a2c856e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "priyanlb",
            "security_groups": [
              "sg-0c33785b17b78698f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a99bec3e71ff5df"
              },
              {
                "subnet_id": "subnet-0cbd50138106fe546"
              }
            ],
            "subnets": [
              "subnet-01a99bec3e71ff5df",
              "subnet-0cbd50138106fe546"
            ],
            "vpc_id": "vpc-0fef8b0d163590c2e",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlbcommunications",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:listener/net/priyanlb/eda46a3f5a2c856e/1b6904cd54801bdb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:targetgroup/nlbtg/55aace0701f79991",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397713354:listener/net/priyanlb/eda46a3f5a2c856e/1b6904cd54801bdb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:loadbalancer/net/priyanlb/eda46a3f5a2c856e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.nlb-tg",
            "aws_security_group.sg",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:targetgroup/nlbtg/55aace0701f79991",
            "arn_suffix": "targetgroup/nlbtg/55aace0701f79991",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397713354:targetgroup/nlbtg/55aace0701f79991",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nlbtg",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "devops-tg"
            },
            "tags_all": {
              "Name": "devops-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlbattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:767397713354:targetgroup/nlbtg/55aace0701f79991-20240411051041025500000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767397713354:targetgroup/nlbtg/55aace0701f79991",
            "target_id": "i-094357c8cd7f475ff"
          },
          "dependencies": [
            "aws_instance.privateserver",
            "aws_lb_target_group.nlb-tg",
            "aws_security_group.sg",
            "aws_subnet.privatesubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab2bb353ada3c9a6",
            "association_id": "eipassoc-096f46237c605cad3",
            "connectivity_type": "public",
            "id": "nat-0026b89a4a9caeaf4",
            "network_interface_id": "eni-0f20437664134ab4a",
            "private_ip": "10.20.1.198",
            "public_ip": "44.223.136.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cbd50138106fe546",
            "tags": {
              "Name": "devops-ngw"
            },
            "tags_all": {
              "Name": "devops-ngw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:route-table/rtb-03bdb99107158d1be",
            "id": "rtb-03bdb99107158d1be",
            "owner_id": "767397713354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0026b89a4a9caeaf4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-privatert"
            },
            "tags_all": {
              "Name": "devops-privatert"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:route-table/rtb-062cd505dba57640d",
            "id": "rtb-062cd505dba57640d",
            "owner_id": "767397713354",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3f5a9e67fa945a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-publicrt"
            },
            "tags_all": {
              "Name": "devops-publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatertassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0619d61e61e87e827",
            "route_table_id": "rtb-03bdb99107158d1be",
            "subnet_id": "subnet-0a0641880feec4a92"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022606f8d904313e5",
            "route_table_id": "rtb-03bdb99107158d1be",
            "subnet_id": "subnet-0bec6b7fe1bb55b9c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13462b444a6b302",
            "route_table_id": "rtb-03bdb99107158d1be",
            "subnet_id": "subnet-0f06b510e3f33517d"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.privatert",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3b068002d0e82a8",
            "route_table_id": "rtb-062cd505dba57640d",
            "subnet_id": "subnet-0cbd50138106fe546"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011ef019a9ce9a918",
            "route_table_id": "rtb-062cd505dba57640d",
            "subnet_id": "subnet-01a99bec3e71ff5df"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1be9d95c7c97a5f",
            "route_table_id": "rtb-062cd505dba57640d",
            "subnet_id": "subnet-03e390ef406d06cbe"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicrt",
            "aws_subnet.publicsubnet",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:security-group/sg-0c33785b17b78698f",
            "description": "allow rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c33785b17b78698f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "767397713354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-sg"
            },
            "tags_all": {
              "Name": "devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-0a0641880feec4a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0641880feec4a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-privatesubnet1"
            },
            "tags_all": {
              "Name": "devops-privatesubnet1"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-0bec6b7fe1bb55b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec6b7fe1bb55b9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-privatesubnet2"
            },
            "tags_all": {
              "Name": "devops-privatesubnet2"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-0f06b510e3f33517d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f06b510e3f33517d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-privatesubnet3"
            },
            "tags_all": {
              "Name": "devops-privatesubnet3"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-0cbd50138106fe546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbd50138106fe546",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet1"
            },
            "tags_all": {
              "Name": "devops-publicsubnet1"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-01a99bec3e71ff5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a99bec3e71ff5df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet2"
            },
            "tags_all": {
              "Name": "devops-publicsubnet2"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:subnet/subnet-03e390ef406d06cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e390ef406d06cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397713354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-publicsubnet3"
            },
            "tags_all": {
              "Name": "devops-publicsubnet3"
            },
            "vpc_id": "vpc-0fef8b0d163590c2e"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397713354:vpc/vpc-0fef8b0d163590c2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-07a5f23533d5a7152",
            "default_route_table_id": "rtb-03d6122c8a7c76ad9",
            "default_security_group_id": "sg-0ba08f1f6f72f4b66",
            "dhcp_options_id": "dopt-01d2eebed4859df0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fef8b0d163590c2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d6122c8a7c76ad9",
            "owner_id": "767397713354",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            }
          }
        }
      ]
    }
  ]
}